<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/standard_background_color"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="@dimen/standard_preference_screen_margin_bottom"
        android:layout_marginTop="@dimen/standard_preference_screen_margin_top"
        android:adjustViewBounds="true"
        android:background="@drawable/choose_region" />

    <LinearLayout
        android:id="@+id/notif_setting_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:orientation="horizontal"
        android:padding="@dimen/standard_global_layout_padding"
        android:weightSum="3">

        <Button
            android:id="@+id/choose_notification_daily_button"
            style="@style/RegionItemButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/standard_global_layout_padding"
            android:layout_weight="1"
            android:text="@string/notification_pref_daily"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/choose_notification_weekly_button"
            style="@style/RegionItemButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/standard_global_layout_padding"
            android:layout_weight="1"
            android:text="@string/notification_pref_weekly"
            android:textAllCaps="false" />


        <Button
            android:id="@+id/choose_notification_monthly_button"
            style="@style/RegionItemButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notification_pref_monthly"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/login_button"
            style="@style/ButtonStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/preference_continue_button" />
    </LinearLayout>
</RelativeLayout>