<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    android:padding="@dimen/standard_global_layout_padding">

    <LinearLayout
        android:id="@+id/brqc_banner_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/brqc_banner_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brqc_banner_text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/brqc_banner_textsize"
            android:textStyle="bold"
            android:layout_marginTop="180dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp" />
    </LinearLayout>


    <LinearLayout
        android:paddingLeft="@dimen/standard_global_layout_padding"
        android:id="@+id/brqc_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/brqc_banner_title"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/login_username"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/user_icon"
            android:hint="@string/login_screen_user_name_hint" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/login_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/password_icon"
            android:hint="@string/login_screen_password_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/standard_global_layout_padding"
        android:gravity="center"
        android:layout_below="@+id/brqc_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            style="@style/ButtonStyle"
            android:layout_centerInParent="true"
            android:textAllCaps="false"
            android:text="@string/login_screen_button"
            android:id="@+id/login_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content" />
    </LinearLayout>



</RelativeLayout>